Fixes #66, prevents images overeaching site boundaries on mobile.

--- a/assets/site_assets/css/megaphysics.css
+++ b/assets/site_assets/css/megaphysics.css
@@ -27,5 +27,6 @@ h3 {
 img {
    display: block;
    margin-left: auto;
-   margin-right: auto
+   margin-right: auto;
+   max-width: 100%;
 }
